--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,16 @@
 # The Docker image that will be used to build your app
-image: python:3.12
-# Functions that should be executed before the build script is run
-before_script: []
+image: python:3.9
+
+before_script:
+  - python -V  # Print python version for logs
+  - pip install jupyter-book
+
+pages:
+  script:
+    - jupyter-book build .
+    - mv _build/html public
+  artifacts:
+    paths:
+      - public
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
