--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,17 @@
 title: Computational Essays -
 author: Noah J. Baumann
 language: de
+logo: img/Logo_DigitalHistoryBerlin.png
 execute:
   execute_notebooks: off
+
+html:
+#   use_issues_button: false
+#   use_repository_button: true
+  extra_footer              : |
+    <div>
+    <a href="http://creativecommons.org/licenses/by/4.0/"><img class="license" alt="Creative Commons License" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a> This book is licensed under a <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons BY 4.0 License</a>.
+    </div>
+
+launch_buttons:
+  thebe: true
