--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,45 @@
 title: Computational Essays
-author: <a href="https://www.geschichte.hu-berlin.de/de/bereiche-und-lehrstuehle/digital-history">Digital History, Humboldt-Universität zu Berlin</a> 
+author: <a href="https://www.geschichte.hu-berlin.de/de/bereiche-und-lehrstuehle/digital-history">Digital History, Humboldt-Universität zu Berlin</a>
+copyright: "2024"
 language: de
 logo: img/Logo_DigitalHistoryBerlin.png
 
 url: "https://pages.cms.hu-berlin.de"
 baseurl: "/digital-history/lehre/computational-essays"
 
-execute:
-  execute_notebooks: off
-
+# HTML-specific settings
 html:
-#   use_issues_button: false
-#   use_repository_button: true
-  extra_footer              : |
+  comments:
+    hypothesis: true
+  extra_navbar: |
+    <div>
+    Veröffentlicht durch Digital History Lehrstuhl, Humboldt-Universität zu Berlin
+    </div>
+  extra_footer: |
     <div>
     <a href="http://creativecommons.org/licenses/by/4.0/"><img class="license" alt="Creative Commons License" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a> This book is licensed under a <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons BY 4.0 License</a>.
     </div>
 
+# Execution settings
+execute:
+  execute_notebooks: force
+  timeout: 300
+  allow_errors: false
+
+# LaTeX settings
+latex:
+  latex_documents:
+    targetname: book.tex
+
+# Launch button settings
 launch_buttons:
+  notebook_interface: jupyterlab
   thebe: true
+  colab: false
+  binderhub_url: ""
+
+# Search settings
+sphinx:
+  config:
+    html_show_copyright: false
+    language: de
