--- a/_config.yml
+++ b/_config.yml
@@ -38,8 +38,27 @@ launch_buttons:
   colab: false
   binderhub_url: ""
 
+parse:
+  myst_enable_extensions:
+    # These are the default extensions
+    - amsmath
+    - colon_fence
+    - deflist
+    - dollarmath
+    - html_admonition
+    - html_image
+    - linkify
+    - replacements
+    - smartquotes
+    - substitution
+    # Add mermaid support
+    - mermaid
+ 
 # Search settings
 sphinx:
   config:
     html_show_copyright: false
     language: de
+    myst_nb_output_stderr: show
+    html_js_files:
+      - https://cdnjs.cloudflare.com/ajax/libs/mermaid/9.1.3/mermaid.min.js
